--- a/navbar.html
+++ b/navbar.html
@@ -29,15 +29,16 @@
     </style>
 </head>
 <body>
+  
     <div id="nav">
       <div>
         Reebok
       </div>
       <div id="nav2">
-        <div>Men</div>
+        <div><a href="mensPage.html">Men</a></div>
         <div>Women</div>
-        <div>Login</div>
-        <div>Sign Up</div>
+        <div><a href="login.html">Login</a></div>
+        <div><a href="signup.html">Sign Up</a></div>
       </div>
     </div>
 </body>
